force-app/main/default/objects/SwitchesConfiguration__c/SwitchesConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Desactivation Switches in Salesforce</description>
    <label>Switches Configuration</label>
</CustomObject>