force-app/main/default/objects/SwitchesConfiguration__c/fields/Basicos__c.field-meta.xml
<CustomField>
    <fullName>Basicos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para reglas de validación  para el perfil CESS-Venta a Distancia (Básicos)</description>
    <label>Basicos</label>
    <type>Checkbox</type>
</CustomField>