force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveCreateCM__c.field-meta.xml
<CustomField>
    <fullName>DesactiveCreateCM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Desactiva, en la creación de un Lead, la creación del interés asociado. Aplicado en el trigger de Leads</description>
    <label>Desactive CreateCM</label>
    <type>Checkbox</type>
</CustomField>