force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveEnvioCTI__c.field-meta.xml
<CustomField>
    <fullName>DesactiveEnvioCTI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si se marca desactiva la parte de los flow que crean el platform event CESS_Integration_Event__e, que es el que desencadena el envío de registros CTI a Genesys cuando se inserta o actualza un miembro de campaña CTI.</description>
    <label>Desactive Envío a CTI</label>
    <type>Checkbox</type>
</CustomField>