force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveFlowCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>DesactiveFlowCampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Descativa Flow de Campaign Member</description>
    <label>DesactiveFlowCampaignMember</label>
    <type>Checkbox</type>
</CustomField>