force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveFlowLead__c.field-meta.xml
<CustomField>
    <fullName>DesactiveFlowLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Desactiva flujos de lead</description>
    <label>DesactiveFlowLead</label>
    <type>Checkbox</type>
</CustomField>