force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveFlowOpp__c.field-meta.xml
<CustomField>
    <fullName>DesactiveFlowOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Desactiva flow de oportunidades</description>
    <label>DesactiveFlowOpp</label>
    <type>Checkbox</type>
</CustomField>