force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveFlowTask__c.field-meta.xml
<CustomField>
    <fullName>DesactiveFlowTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Desactivar  los flujos de tarea.</description>
    <label>DesactiveFlowTask</label>
    <type>Checkbox</type>
</CustomField>