force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveValidationDeleteLead__c.field-meta.xml
<CustomField>
    <fullName>DesactiveValidationDeleteLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite desactivar la validación del borrado de Leads que comprueba que ya se hayan borrado correctamente de CTI</description>
    <label>DesactiveValidationDeleteLead</label>
    <type>Checkbox</type>
</CustomField>