force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveVRAccount__c.field-meta.xml
<CustomField>
    <fullName>DesactiveVRAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Desactiva las reglas de validación de account y person account</description>
    <label>DesactiveVRAccount</label>
    <type>Checkbox</type>
</CustomField>