force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveVRCampaignMember__c.field-meta.xml
<CustomField>
    <fullName>DesactiveVRCampaignMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Desactiva las reglas de validación del objeto Campaign Member</description>
    <label>DesactiveVRCampaign Member</label>
    <type>Checkbox</type>
</CustomField>