force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveVRContact__c.field-meta.xml
<CustomField>
    <fullName>DesactiveVRContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to siable validation rules in contact</description>
    <label>DesactiveVRContact</label>
    <type>Checkbox</type>
</CustomField>