force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveVRLead__c.field-meta.xml
<CustomField>
    <fullName>DesactiveVRLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to disable validation rules in leads</description>
    <label>DesactiveVRLead</label>
    <type>Checkbox</type>
</CustomField>