force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveVRMiembrodeCampanaAG__c.field-meta.xml
<CustomField>
    <fullName>DesactiveVRMiembrodeCampanaAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para desactivar las reglas de validación del objeto miembro de campaña</description>
    <label>DesactiveVRMiembrodeCampañaAG</label>
    <type>Checkbox</type>
</CustomField>