force-app/main/default/objects/SwitchesConfiguration__c/fields/DesactiveVROpportunity__c.field-meta.xml
<CustomField>
    <fullName>DesactiveVROpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to siable validation rules in opps</description>
    <label>DesactiveVROpportunity</label>
    <type>Checkbox</type>
</CustomField>