force-app/main/default/objects/SwitchesConfiguration__c/fields/EquipoBlecis__c.field-meta.xml
<CustomField>
    <fullName>EquipoBlecis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para descativar reglas de validación del Perfil CESS - Venta a Distancia Sevilla</description>
    <label>Equipo Blecis</label>
    <type>Checkbox</type>
</CustomField>